--- a/src/square/Square.css
+++ b/src/square/Square.css
@@ -8,6 +8,7 @@
 
 .square-item:not(.mine-square, .safe-square):hover {
     background: linear-gradient(220deg, rgb(172, 167, 200) 0%, rgb(220, 235, 5), rgb(216, 4, 227));
+    border-radius: 1rem;
     cursor: pointer;
 }
 
