--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,15 @@ body {
 .totalScore {
   font-size: 50px;
   color: gold;
-  margin: 100px;
+  margin: auto 120px;
 }
 
 .totalScore p {
   margin: 0;
+}
+
+.totalScore button {
+  font-size:large;
 }
 
 .d-flex {
@@ -36,7 +40,7 @@ body {
 }
 
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
