--- a/src/App.css
+++ b/src/App.css
@@ -5,26 +5,69 @@ body {
   font-weight: 600;
   font-style: normal;
   background: linear-gradient(300deg, rgb(6, 0, 46) 0%, rgb(0, 0, 0), rgb(34, 0, 36));
+
+  /* @media (max-width:600px) {
+    background: None;
+  } */
 }
 
 .d-grid {  
   display: grid;
+  justify-content: center;
   grid-template-columns: repeat(5, 100fr);
   grid-gap: .5rem;
 }
 
+.controls {
+  margin-top: 10%;
+  display:flex;
+  justify-content: center;
+  gap: 5px
+}
+
+.controls div {
+  font-size: large;
+  padding: 0 10px;
+  border: 1px solid gold;
+  border-radius: .5rem;
+}
+
 .totalScore {
   font-size: 50px;
+  @media (max-width:600px) {
+    font-size: 40px;
+    margin-right: 0;
+  }
   color: gold;
-  margin: 100px;
+  justify-content: center;
+  margin-bottom: 1rem;
+  margin-right: 12rem;
 }
 
 .totalScore p {
   margin: 0;
 }
 
+.totalScore button {
+  font-size:large;
+}
+
 .d-flex {
   display: flex;
+  margin: 5rem 3rem 0 10rem;
+
+  @media (max-width: 500px) {
+    margin: 0 0 0 0;
+    display: block;
+    justify-content: center;
+
+  }
+}
+
+.resetBtn {
+  width: auto;
+  height: 2.5rem;
+  margin: 2rem;
 }
 
 .gap-10 {
@@ -36,8 +79,8 @@ body {
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 100%;
+  margin: 2rem auto;
   padding: 2rem;
   text-align: center;
 }
