--- a/src/square/Square.css
+++ b/src/square/Square.css
@@ -1,21 +1,29 @@
 .square-item {
-    width: 100px;
-    height: 100px;
-    background: linear-gradient(300deg, rgb(172, 167, 200) 0%, rgb(220, 235, 5), rgb(216, 4, 227));
+    width: 6rem;
+    height: 6rem;
+    background: linear-gradient(300deg, rgb(172, 167, 200) 0%, rgb(5, 105, 235), rgb(216, 4, 227));
     border-radius: .5rem;
+
+    @media (max-width:500px) {
+        width: 4.5rem;
+        height: 4.5rem;
+      }
 
 }
 
 .square-item:not(.mine-square, .safe-square):hover {
-    background: linear-gradient(220deg, rgb(172, 167, 200) 0%, rgb(220, 235, 5), rgb(216, 4, 227));
+    background: linear-gradient(140deg, rgb(172, 167, 200) 0%, rgb(5, 105, 235), rgb(216, 4, 227));
     border-radius: 1rem;
     cursor: pointer;
 }
 
 .safe-square {
-    background: rgb(0, 255, 0);
+    background: rgb(5, 105, 235);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='50%' y='60%' dominant-baseline='middle' text-anchor='middle' font-size='60' fill='green'%3E💎%3C/text%3E%3C/svg%3E");
+    background-size: contain;
 }
 
 .mine-square {
     background: red;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='53%' y='55%' dominant-baseline='middle' text-anchor='middle' font-size='60' fill='red'%3E💣%3C/text%3E%3C/svg%3E");  
 }
